--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body{
 .container a #logo-search{
     color: black;
 }
-nav {
+nav.topbar {
     position: absolute;
   display: block;
     background: linear-gradient(to right, #DCF7F0 60%, #7580ac);
